# atlas

./: .gitignore  ARCHITECTURE.md  Makefile  QUICKSTART.md  README.md  docker-compose.stack.adstack.yml  docker-compose.stack.scenario.yml  docker-compose.stack.yml  inventory.ini.example  package-lock.json  pyproject.toml  run.sh  run_dev.sh  run_scenario.sh  shutdown.sh  start_fiftyone.sh  test_system.py
.claude/: CLAUDE.md
ad_stack/: server.py
agent_controller/: README.md  __init__.py  behaviors.py  command_tracker.py  controller.py  ego_agent.py  metrics.py  sensor_config.py  stamp_logger.py  traffic_manager_wrapper.py  vehicle_config.py
app/: __init__.py  main.py
archived/: run_mcp_server.sh
data/: carla_settings.json
docker/: Dockerfile.alpamayo  Dockerfile.base  Dockerfile.dummy  Dockerfile.scenario  README.md  build.sh  docker-compose.yml  requirements-alpamayo.txt  requirements-base.txt
docs/: DATACLASS_MODELS.md  DATA_MODEL.md  DOCKER_SWARM.md  PEGASUS_ANALYSIS_TEMPLATE.md  PEGASUS_INTEGRATION.md  SCENARIO_WRITER_MIGRATION.md  api_integration.md  fiftyone_integration.md  scenario_hierarchy_usage.md  ui_settings.md
examples/: advanced_features_example.py  agent_controller_callback.py  agent_controller_example.py  agent_controller_metrics.py  agent_controller_simple.py  opendrive_utils_example.py  scenario_hierarchy_example.py
opendrive_utils/: README.md  __init__.py  advanced_features.py  coordinate_transform.py  parser.py  spawn_helper.py
playbooks/: deploy_atlas.yml  init_swarm.yml  join_swarm.yml  setup_docker.yml
protos/: ad_stack.proto  (+2 more)
(+102 files in other folders)
