[project]
name = "atlas"
version = "0.1.0"
description = "Analytic Transparent LAnguage-driven Scenario generator for CARLA"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "rerun-sdk>=0.29.0",
    "websockets>=14.1",
    "pydantic>=2.0.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "docker>=7.1.0",
    "psutil>=6.1.0",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.5.1",
    "streamlit>=1.54.0",
    "fiftyone>=1.12.0",
    "pyxodr>=0.1.3",
    "numpy>=1.26.0",
    "carla @ file:///home/masaya/workspace/atlas/carla_wheels/carla-0.10.0-cp312-cp312-linux_x86_64.whl",
    "dataclasses>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app", "opendrive_utils"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
